Fix aspirante card grid columns

--- a/src/pages/ConvocatoriaDetalle/ConvocatoriaDetallePage.css
+++ b/src/pages/ConvocatoriaDetalle/ConvocatoriaDetallePage.css
@@ -49,13 +49,13 @@
 
 .convocatoria-detalle__grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-template-columns: 1fr;
   gap: 1rem;
 }
 
 .convocatoria-detalle__skeletons {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-template-columns: 1fr;
   gap: 1rem;
 }
 
@@ -73,5 +73,26 @@
   }
   100% {
     background-position: -200% 0%;
+  }
+}
+
+@media (min-width: 640px) {
+  .convocatoria-detalle__grid,
+  .convocatoria-detalle__skeletons {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 960px) {
+  .convocatoria-detalle__grid,
+  .convocatoria-detalle__skeletons {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1280px) {
+  .convocatoria-detalle__grid,
+  .convocatoria-detalle__skeletons {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
