--- a/src/modules/admisiones/pages/EvaluacionEtapaPage/EvaluacionEtapaPage.css
+++ b/src/modules/admisiones/pages/EvaluacionEtapaPage/EvaluacionEtapaPage.css
@@ -5,6 +5,11 @@
   max-width: 1100px;
 }
 
+.evaluacion-etapa-page--embedded {
+  max-width: 100%;
+  width: 100%;
+}
+
 .evaluacion-etapa-page__back {
   color: #1d4ed8;
   text-decoration: none;
